--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						</div><!--end navbar collapse-->
 			    </div><!--end navcontainer-->
 		    </div><!--end navbar-->
-				<div class="row"><!--start jumbotron-->
+        <div class="row"><!--start jumbotron-->
 				  <div class="col-md-12 jumbotron">
 				    <div class="text-center">
 				      <h1>GreensBoro College</h1>
@@ -202,7 +202,7 @@
 							</div>
 		   		  </div>
 		 		  </div>
-		 			<div class="col-sm-6">
+		 			<div class="col-sm-6" id="overview">
 			 				<h3>Overview</h3>
 			 				<p>GreensBoro College of engineering, an autonomous institution affiliated to Anna University of Technology – Chennai, established in
 				  		the year 2000. It made a remarkable growth in the placement edge in the last decade by a strong, determinant and dynamic placement
